Prevent words from wrapping on whitespace in buttons
Helps keep the buttons nice and flat

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ button {
   border-radius: 8px;
   padding: 8px 32px;
   font-size: 16px;
+  white-space: nowrap;
 }
 
 /* || Header */
